# expense_ui

./: .dockerignore  .gitignore  README.md  vercel.json
a2ui-renderer/.wireit/6275696c643a747363/: fingerprint  manifest
a2ui-renderer/.wireit/636f70792d73706563/: fingerprint  manifest
agent/: Dockerfile  README.md  __init__.py  __main__.py  agent_executor.py  entries.py  ocr.py  pyproject.container.toml  pyproject.toml  storage.py  ui_builder.py
agent/data/: claims.json  entries.json
client/: entries.html  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  EntriesApp.tsx  a2uiClient.ts  a2uiThemeProvider.ts  custom-elements.d.ts  entriesMain.tsx  externals.d.ts  main.tsx  styles.css
client/src/components/: A2UISurface.tsx
client/src/theme/: defaultTheme.ts  minimalTheme.ts
